Refactor file I/O to use byte-based operations
Co-authored-by: dmstjd0507 <dmstjd0507@office.bufs.ac.kr>